# codex-proxy

./: .gitignore  .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  release-install-test.yml  release.yml
docs/: admin-api.md  development.md  install.md  release.md
scripts/: install.sh  test-release-install-flow.sh  uninstall.sh  update.sh
src/: auth_flow.rs  config.rs  error.rs  main.rs  models.rs  request_stats.rs  routes.rs  state.rs
src/entities/: admin_key.rs  api_key.rs  auth_session.rs  credential.rs  credential_limit.rs  mod.rs  request_record.rs
ui/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ui/src/: App.vue  main.ts
ui/src/api/: client.ts  service.ts  types.ts
ui/src/components/: AdminGate.vue  BreakdownList.vue  LastErrorCard.vue  MetricCard.vue  MultiTrendChart.vue  TokenUsageStrip.vue  TrendAreaChart.vue
ui/src/composables/: use-auto-refresh.ts  use-is-mobile.ts
ui/src/router/: index.ts
ui/src/stores/: session.ts
ui/src/styles/: base.css
ui/src/utils/: browser-auth.ts  copy.ts  format.ts
ui/src/views/: AdminKeysView.vue  ApiKeysView.vue  AuthCallbackView.vue  AuthSessionsView.vue  CredentialsView.vue  OverviewView.vue  RequestsView.vue
