[package]
name = "codex-proxy"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
anyhow = "1.0.102"
async-stream = "0.3.6"
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "macros", "query", "tokio", "ws"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
codex-api = { path = "vendor/codex/codex-rs/codex-api" }
codex-login = { path = "vendor/codex/codex-rs/login" }
codex-protocol = { path = "vendor/codex/codex-rs/protocol" }
futures = { version = "0.3.32", default-features = false }
http = "1.4.0"
rand = "0.10.0"
reqwest = { version = "0.13.2", features = ["json", "stream", "rustls"] }
sea-orm = { version = "1.1.19", default-features = false, features = [
    "macros",
    "runtime-tokio-rustls",
    "sqlx-sqlite",
    "with-chrono",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal"] }
tokio-util = "0.7.18"
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-native-roots"] }
tower-http = { version = "0.6.8", features = ["fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.0", features = ["serde", "v4"] }

[patch.crates-io]
tokio-tungstenite = { git = "https://github.com/openai-oss-forks/tokio-tungstenite", rev = "132f5b39c862e3a970f731d709608b3e6276d5f6" }
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }

[patch."ssh://git@github.com/openai-oss-forks/tungstenite-rs.git"]
tungstenite = { git = "https://github.com/openai-oss-forks/tungstenite-rs", rev = "9200079d3b54a1ff51072e24d81fd354f085156f" }
